Adding search functionality to the data views, and filters to them as well Added filters to team_summary Added a file to add TBA implementation

--- a/public/pages/pit_scouting.html
+++ b/public/pages/pit_scouting.html
@@ -96,7 +96,7 @@ document.addEventListener('touchmove', function(event) {
     <div id="result" class="badge"></div>
   </div>
 </div>
-<footer>FRC 4123 Scouting • Config-driven • SQLite</footer>
+<footer>FRC 4123 Scouting</footer>
 <script type="module">
   import { buildPitForm } from "/js/dynamic_form.js";
   const app = await buildPitForm(document.getElementById('pit-root'));
