--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
 <div class="mobile-nav">
   <button class="hamburger" onclick="toggleMenu()">☰</button>
   <div class="mobile-menu" id="mobileMenu">
-    <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
+  <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
   <a href="/" onclick="toggleMenu()">Home</a>
+  <a href="/pages/ondeck.html" onclick="toggleMenu()">Ondeck</a>
   <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
   <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
   <a href="/pages/team_summary.html" class="admin-only" onclick="toggleMenu()">Team Summary</a>
@@ -76,6 +77,7 @@ document.addEventListener('touchmove', function(event) {
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
+  <a href="/pages/ondeck.html">Ondeck</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
   <a href="/pages/team_summary.html" class="admin-only">Team Summary</a>
@@ -106,7 +108,7 @@ document.addEventListener('touchmove', function(event) {
       </div>
     </div>
 </div>
-<footer>FRC 4123 Scouting • Config-driven • SQLite</footer>
+<footer>FRC 4123 Scouting</footer>
 
 <script>
 // Global variable to store checklist data
