--- a/public/pages/raw_match_edit.html
+++ b/public/pages/raw_match_edit.html
@@ -13,6 +13,7 @@
   <div class="mobile-menu" id="mobileMenu">
   <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
   <a href="/" onclick="toggleMenu()">Home</a>
+  <a href="/pages/pit_procedures.html" onclick="toggleMenu()">Pit Procedures</a>
   <a href="/pages/ondeck.html" onclick="toggleMenu()">Ondeck</a>
   <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
   <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
@@ -77,6 +78,7 @@ document.addEventListener('touchmove', function(event) {
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
+  <a href="/pages/pit_procedures.html">Pit Procedures</a>
   <a href="/pages/ondeck.html">Ondeck</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
@@ -205,7 +207,7 @@ async function load(reset){
 document.getElementById('load').addEventListener('click', ()=>load(true));
 document.getElementById('more').addEventListener('click', ()=>load(false));
 load(true);
-let allMatches = [];
+
 let currentFilters = [];
 let configData = null;
 let totalMatchesCount = 0;
