--- a/public/pages/team_summary.html
+++ b/public/pages/team_summary.html
@@ -489,6 +489,7 @@ body.event-history-open .container {
   <div class="mobile-menu" id="mobileMenu">
   <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
   <a href="/" onclick="toggleMenu()">Home</a>
+  <a href="/pages/pit_procedures.html" onclick="toggleMenu()">Pit Procedures</a>
   <a href="/pages/ondeck.html" onclick="toggleMenu()">Ondeck</a>
   <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
   <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
@@ -553,6 +554,7 @@ document.addEventListener('touchmove', function(event) {
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
+  <a href="/pages/pit_procedures.html">Pit Procedures</a>
   <a href="/pages/ondeck.html">Ondeck</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
